--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "sequelize": "npx sequelize-cli",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:seed": "npx sequelize-cli db:seed:all",
-    "db:rollback": "npx sequelize-cli db:migrate:undo",
+    "db:rollback": "npx sequelize-cli db:migrate:undo:all",
     "db:drop": "npx sequelize-cli db:drop"
   },
   "author": "K-adi",
